--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,11 @@
     "axios": "0.18.0",
     "babel-polyfill": "^6.26.0",
     "express": "4.16.4",
-    "node-sass": "^4.11.0",
     "react": "^16.14.0",
     "react-app-polyfill": "^0.2.2",
     "react-dom": "^16.14.0",
     "react-hot-loader": "^4.13.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
