--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,14 @@
     "react-hot-loader": "^4.13.0",
     "react-scripts": "^5.0.1"
   },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.2.11",
+    "vite-plugin-html": "^3.2.2"
+  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "vite",
+    "build": "vite build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start:server": "node server"
