--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,12 @@ services:
     restart: always
     build: ./frontend
     container_name: node-app
-    command: ["npm", "start"]
     volumes:
       - ./frontend:/usr/src/app
       - /usr/src/app/node_modules
-    expose:
-      - "3000"
+    ports:
+      - "3000:3000"
     stdin_open: true
     tty: true
+    # environment:
+    #   - NODE_ENV=development
