--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,16 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "0.18.0",
-    "babel-polyfill": "^6.26.0",
+    "axios": "^1.6.8",
     "express": "4.16.4",
-    "react": "^18.3.1",
-    "react-app-polyfill": "^0.2.2",
-    "react-dom": "^18.3.1",
-    "react-scripts": "^5.0.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.2.2",
     "vite": "^5.2.11",
     "vite-plugin-html": "^3.2.2"
   },
