--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "express": "4.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
